--- a/server/ee/apps/config-server-app/src/main/resources/config/apps/application.yml
+++ b/server/ee/apps/config-server-app/src/main/resources/config/apps/application.yml
@@ -159,7 +159,7 @@ bytechef:
     #        clientId: 123456789
     #        clientSecret: 123456789
     redirect-uri: ${bytechef.public-url}/callback
-  public-url: http://127.0.0.1:5173
+  public-url: https://dashboard.devagentic.io
   resources:
     web: file:///opt/bytechef/client/
   security:
@@ -170,7 +170,7 @@ bytechef:
   tracing:
     zipkin:
       endpoint: http://localhost:4318/v1/traces
-  webhook-url: http://127.0.0.1:7888/webhooks/{id}
+  webhook-url: https://dashboard.devagentic.io/webhooks/{id}
   # When the worker is enabled, subscribe to the default "default" queue with 10 concurrent consumers.
   # You may also route workflow tasks to other arbitrarily named task queues by specifying the "node"
   # property on any given task.
