--- a/client/package.json
+++ b/client/package.json
@@ -104,20 +104,20 @@
     "zustand": "^5.0.5"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^2.0.0",
+    "@chromatic-com/storybook": "^4.0.1",
     "@dagrejs/dagre": "^1.1.4",
     "@graphql-codegen/cli": "^5.0.7",
     "@graphql-codegen/typescript-react-query": "^6.1.1",
-    "@storybook/addon-actions": "^9.0.9",
-    "@storybook/addon-essentials": "^9.0.9",
-    "@storybook/addon-interactions": "^9.0.9",
-    "@storybook/addon-links": "^9.0.9",
-    "@storybook/addon-mdx-gfm": "^9.0.9",
-    "@storybook/addon-onboarding": "^9.0.9",
-    "@storybook/blocks": "^9.0.9",
-    "@storybook/react": "^9.0.9",
-    "@storybook/react-vite": "^9.0.9",
-    "@storybook/test": "^9.0.9",
+    "@storybook/addon-actions": "^8.6.14",
+    "@storybook/addon-essentials": "^8.6.14",
+    "@storybook/addon-interactions": "^8.6.14",
+    "@storybook/addon-links": "^8.6.14",
+    "@storybook/addon-mdx-gfm": "^8.6.14",
+    "@storybook/addon-onboarding": "^8.6.14",
+    "@storybook/blocks": "^8.6.14",
+    "@storybook/react": "^8.6.14",
+    "@storybook/react-vite": "^8.6.14",
+    "@storybook/test": "^8.6.14",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.16",
@@ -136,12 +136,12 @@
     "autoprefixer": "^10.4.21",
     "eslint": "8.57.0",
     "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-bytechef": "1.0.0",
+    "eslint-plugin-bytechef": "file:./eslint",
     "eslint-plugin-prettier": "^5.4.1",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-sort-destructure-keys": "^2.0.0",
-    "eslint-plugin-storybook": "^9.0.9",
+    "eslint-plugin-storybook": "^9.0.16",
     "eslint-plugin-tailwindcss": "^3.18.0",
     "identity-obj-proxy": "^3.0.0",
     "isobject": "^4.0.0",
@@ -153,7 +153,7 @@
     "prettier-plugin-tailwindcss": "^0.6.12",
     "react-fast-compare": "^3.2.2",
     "sanitize-html": "^2.17.0",
-    "storybook": "^9.0.9",
+    "storybook": "^8.6.14",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
