--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -3,7 +3,11 @@
         "baseUrl": "./src",
         "target": "esnext",
         "incremental": true,
-        "lib": ["dom", "dom.iterable", "esnext"],
+        "lib": [
+            "dom",
+            "dom.iterable",
+            "esnext"
+        ],
         "allowJs": true,
         "skipLibCheck": true,
         "esModuleInterop": true,
@@ -17,9 +21,18 @@
         "noEmit": true,
         "jsx": "react-jsx",
         "paths": {
-            "@/*": ["./*"]
+            "@/*": [
+                "./*"
+            ]
         }
     },
-    "include": ["src"],
-    "exclude": ["node_modules"]
+    "include": [
+        "src"
+    ],
+    "exclude": [
+        "node_modules",
+        "**/*.test.tsx",
+        "**/*.test.ts",
+        "**/tests/**/*"
+    ]
 }
