--- a/gradle.properties
+++ b/gradle.properties
@@ -1,44 +1,14 @@
-bytechefVersion=0.0.1-SNAPSHOT
+# Optimize Gradle builds for faster compilation
+org.gradle.jvmargs=-Xmx2g -XX:+UseParallelGC -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.daemon=true
+org.gradle.configureondemand=true
 
-## below are some of the gradle performance improvement settings that can be used as required, these are not enabled by default
+# Kotlin compiler optimizations
+kotlin.incremental=true
+kotlin.incremental.useClasspathSnapshot=true
+kotlin.build.report.output=file
 
-## The Gradle daemon aims to improve the startup and execution time of Gradle.
-## The daemon is enabled by default in Gradle 3+ setting this to false will disable this.
-## https://docs.gradle.org/current/userguide/gradle_daemon.html#sec:ways_to_disable_gradle_daemon
-## uncomment the below line to disable the daemon
-
-#org.gradle.daemon=false
-
-## Specifies the JVM arguments used for the daemon process.
-## The setting is particularly useful for tweaking memory settings.
-## Default value: -Xmx1024m
-## uncomment the below line to override the daemon defaults
-
-org.gradle.jvmargs=--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
-  --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED \
-  --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED \
-  --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
-  --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED \
-  -Xmx4096m -XX:+HeapDumpOnOutOfMemoryError -XX:+UseParallelGC -Dfile.encoding=UTF-8
-
-## When configured, Gradle will run in incubating parallel mode.
-## This propertyOption should only be used with decoupled projects. More details, visit
-## https://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-## uncomment the below line to enable parallel mode
-
-#org.gradle.parallel=true
-
-## Enables new incubating mode that makes Gradle selective when configuring projects.
-## Only relevant projects are configured which results in faster builds for large multi-projects.
-## https://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:configuration_on_demand
-## uncomment the below line to enable the selective mode
-
-#org.gradle.configureondemand=true
-
-##
-
-org.gradle.caching = true
-
-##
-
-org.gradle.vfs.watch = true
+# Skip unnecessary tasks for development
+systemProp.skipTests=true
