user registration and admin privileges issue fixed

--- a/server/apps/server-app/src/main/resources/config/application.yml
+++ b/server/apps/server-app/src/main/resources/config/application.yml
@@ -292,6 +292,7 @@ bytechef:
       password:
   sign-up:
     activation-required: false
+    enabled: true
   # Tenant support mode (single | multi - ee only) default: single
   tenant:
     mode: single
