--- a/client/package.json
+++ b/client/package.json
@@ -71,11 +71,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-
     "d3-hierarchy": "^3.1.2",
     "d3-timer": "^3.0.1",
     "date-fns": "^4.1.0",
     "fetch-intercept": "^2.4.0",
+    "firebase": "^11.10.0",
     "html-entities": "^2.6.0",
     "i18next": "^25.2.1",
     "lucide-react": "^0.515.0",
